services/ui-vue/deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vue3-site-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vue3-site
  template:
    metadata:
      labels:
        app: vue3-site
    spec:
      containers:
        - name: vue3-site-container
          image: static-site:latest
          ports:
            - containerPort: 8080

          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 100

          startupProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            failureThreshold: 30
            periodSeconds: 10

          resources:
            requests:
              memory: "100Mi"
              cpu: "20m"
            limits:
              memory: "200Mi"
              cpu: "50m"
