services/ui-vue/deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ui-vue-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - http:
      paths:
        - path: /vue
          pathType: Prefix
          backend:
            service:
              name: vue3-site-service
              port:
                number: 8080
